frontend, bookmark articles

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,11 +7,7 @@
     <meta name="description" content="chicago news" />
     <meta name="keywords" content="news, chicago" />
     <!-- put favicon (logo) -->
-    <!-- <link
-      rel="icon"
-      type="image/svg+xml"
-      href="/src/assets/Icon-Only-Color.svg"
-    /> -->
+    <link rel="icon" type="image/svg+xml" href="/src/assets/favIcon.svg" />
     <title>Tidings from Chicago</title>
   </head>
   <body>
